test(core): improve lifecycle test coverage and quality